WebCore:

REGRESSION (r17701): Favicons should be viewable as image documents
        <http://bugs.webkit.org/show_bug.cgi?id=15640>

        Reviewed by Darin.

        On Tiger and Leopard, the image/x-icon MIME type is not returned from
        CGImageSourceCopyTypeIdentifiers(), so opening a URL to a favicon caused
        the icon to be downloaded instead being displayed in an image document.

        Test: fast/images/favicon-as-image.html

        * platform/MIMETypeRegistry.cpp:
        (WebCore::initialiseSupportedImageMIMETypes): Manually add image/x-icon to
        supportedImageMIMETypes and supportedImageResourceMIMETypes.  Also fixed
        comment about the image/bmp MIME type since it applies to both Tiger and
        Leopard.

LayoutTests:

        Test for:  REGRESSION (r17701): Favicons should be viewable as image documents
        <http://bugs.webkit.org/show_bug.cgi?id=15640>

        Reviewed by Darin.

        * fast/images/favicon-as-image.html: Added.
        * fast/images/resources/favicon.ico: Added.
        * platform/mac/fast/images/favicon-as-image-expected.checksum: Added.
        * platform/mac/fast/images/favicon-as-image-expected.png: Added.
        * platform/mac/fast/images/favicon-as-image-expected.txt: Added.


Canonical link: https://commits.webkit.org/21144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27223 268f45cc-cd09-0410-ab3c-d52691b4dbfc